0.27.0 - Finished initial refactor to Translation using node-children instead of concatenating to an internal string